--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,50 @@
+server.port=8081
+spring.main.banner-mode=off
+logging.level.org.springframework=ERROR
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/cafeDB?autoReconnect=true&useSSL=false
+#_______________________________________________________
+spring.datasource.url=jdbc:mysql://localhost:3306/myDb?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.dbcp2.initial-size = 50
-spring.datasource.dbcp2.max-idle = 50
-spring.datasource.dbcp2.default-query-timeout = 10000
-spring.datasource.dbcp2.default-auto-commit = true
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.dbcp2.initial-size=50
+spring.datasource.dbcp2.max-idle=50
+spring.datasource.dbcp2.default-query-timeout=10000
+spring.datasource.dbcp2.default-auto-commit=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#  HIBERNATE PROPERTIES
+#_______________________________________________________
+#
+#mysql.url=jdbc:mysql://localhost:3306/cafeDB
+#mysql.username=root
+#mysql.password=root
+#mysql.fetchSize=50000
+#mysql.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#mysql.hibernate.use.query.cache=false
+#mysql.hibernate.use.second.level.cache=false
+#mysql.hibernate.show.sql=true
+#mysql.hibernate.format.sql=true
+#mysql.hibernate.generate_statistics=true
+#mysql.hibernate.use_sql_comments=true
+#mysql.hibernate.cache.use_structured_entries=true
+## Hibernate validation
+#mysql.hibernate.validation.insert_group=javax.validation.groups.Default
+#mysql.hibernate.validation.update_group=javax.validation.groups.Default
+#mysql.hibernate.validation.delete_group=javax.validation.groups.Default
+## Hibernate Envers
+#mysql.hibernate.listeners.envers.auto_register=true
 #JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
-
 #JWT
 application.jwt.secretKey=verysecurekeyverysecurekeyverysecurekeyverysecurekey
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationAfterDays=14
-
 #Loging
 logging.level.org.springframework.data=INFO
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
